# tesseractoe

./: README.md
BlazorToe/: .gitignore  Program.cs
BlazorToe/Components/: App.razor  _Imports.razor
BlazorToe/Components/Components/: ActiveGame.razor  Cell.razor  Cell.razor.css  WaitingGame.razor
BlazorToe/Components/Layout/: MainLayout.razor  NavMenu.razor
BlazorToe/Components/Pages/: Home.razor  Play.razor  Play.razor.css  Todo.razor  Waiting.razor
BlazorToe/Models/: AcceptGame.cs  CreateGame.cs  Game.cs  PlayGame.cs
BlazorToe/Properties/: launchSettings.json
BlazorToe/Services/: PlayerState.cs
BlazorToe/Utils/: LocalStorageHelper.cs
BlazorToe/wwwroot/: app.css
angular-toe/: README.md  angular.json  package-lock.json  package.json
angular-toe/src/: index.html  main.ts  styles.scss
angular-toe/src/app/: app.component.scss  app.component.ts  app.routes.ts
angular-toe/src/app/models/: game.ts
angular-toe/src/app/services/: games.service.ts  player-info.service.ts
axum_backend/: Cargo.toml
axum_backend/src/: game.rs  main.rs
react-toe/: package-lock.json  package.json
react-toe/src/app/: globals.css  layout.tsx  page.tsx
react-toe/src/components/: Board.tsx  GameCard.tsx  OpenGameCard.tsx  Square.tsx
react-toe/src/lib/: game_service.ts
react-toe/src/types/: Result.ts  game.ts
svelte-toe/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
svelte-toe/src/lib/: game.ts
svelte-toe/src/routes/: +layout.svelte  +page.svelte
svelte-toe/src/routes/play/: Cell.svelte
tester/: tester.py
(+25 files in other folders)
