[package]
name = "axum_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version =" 1.45.1", features = ["rt-multi-thread"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

